--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Assistant:300,700" rel="stylesheet">
 </head>
 <body>
+	<div id="ball"></div>
 	<div class="landing-holder">
 		<div class="title">
 			<h1>hi, I'm</h1>
-			<svg id="name-svg" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 698 265"><defs></defs><title>linx</title><polygon class="name-3 colored" points="517 250 491 249 668 15 693 15 517 250"/><rect class="name-2 colored" x="279.5" y="112" width="23.5" height="137.5"/><rect class="name-1 colored" x="448" y="15" width="22.5" height="149"/><rect class="name" y="15" width="90" height="213"/><rect class="name" x="169" y="15" width="90" height="234"/><polygon class="name" points="279 0 470 153 470 265 279 112 279 0"/><polygon class="name" points="491 15.75 603 250 698 250 585 15.38 491 15.75"/><rect class="name-3 colored" y="228" width="151" height="21"/></svg>
-			<h2>maker of web things currently working for Scalable Commerce in Santa Barbara, CA</h2>
+			<svg id="name-svg" data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 698 265"><defs></defs><title>linx</title><polygon class="name-3 colored rect-4" points="517 250 491 249 668 15 693 15 517 250"/><rect class="name-2 rect-2 colored" x="279.5" y="112" width="23.5" height="137.5"/><rect class="name-1 colored rect-3" x="448" y="15" width="22.5" height="149"/><rect class="name" y="15" width="90" height="213"/><rect class="name" x="169" y="15" width="90" height="234"/><polygon class="name" points="279 0 470 153 470 265 279 112 279 0"/><polygon class="name" points="491 15.75 603 250 698 250 585 15.38 491 15.75"/><rect class="name-3 colored rect-1" y="228" width="151" height="21"/></svg>
+			<h2>a maker of web things currently working for Scalable Commerce in Santa Barbara, CA</h2>
+			<div class="social">
+				<img src="./img/github-logo.png" alt="">
+				<img src="./img/linkedin-logo.png" alt="">
+			</div>
 			<h3><span id="work">work<div class="triangle"></div>
 			<div class="triangle"></div>
 			<div class="triangle"></div></span></h3>
@@ -967,6 +972,7 @@
 		<div id="triangle-right"></div>
 	</div> -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 </html>
