--- a/index.html
+++ b/index.html
@@ -971,7 +971,7 @@
 		<div id="triangle-left"></div>
 		<div id="triangle-right"></div>
 	</div> -->
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
 	<script src="./js/main.js"></script>
 </body>
