--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<div id="ball"></div>
+	<div class="loading-screen two"><p>loading<span class="loading-dots">.</span><span class="loading-dots">.</span><span class="loading-dots">.</span></p></div>
+	<div class="loading-screen one"></div>
 	<div class="landing-holder">
 		<div class="title">
 			<h1>hi, I'm</h1>
