progressbar & name animation timing

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 	<div id="ball"></div>
-	<div class="loading-screen two"><p>loading<span class="loading-dots">.</span><span class="loading-dots">.</span><span class="loading-dots">.</span></p></div>
+	<div class="loading-screen two">
+		<p>loading<span class="loading-dots">.</span><span class="loading-dots">.</span><span class="loading-dots">.</span></p>
+		<div id="progressbar">
+		  <span id="loading"></span>
+		</div>
+	</div>
 	<div class="loading-screen one"></div>
 	<div class="landing-holder">
 		<div class="title">
