initial work section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,75 @@
 		</div>
 	</div>
 	<div class="loading-screen one"></div>
+	<div class="work-screen one">
+		<div class="work-img active"><img src="./img/wedding.gif" alt="" class="border"></div>
+		<div class="work-img"><img src="./img/withlove-home.png" alt=""></div>
+		<div class="work-img"><img src="./img/nerdwerds.png" alt=""></div>
+		<div class="work-img"><img src="./img/tree-mockup" alt=""></div>
+		<div class="work-img"><img src="./img/sltwtr.png" alt=""></div>
+		<div class="work-img"><img src="./img/candy.gif" alt=""></div>
+	</div>
+	<div class="work-screen two">
+		<div class="work-text active">
+			<h3>M|K</h3>
+			<p>I designed and built this website for a friend's wedding. Now their friends and family can see photos, get info and directions, visit their registry, and RSVP all in one convenient place. It even has a countdown to the special day!</p>
+			<ul>
+				<li>Created mockup and manipulated photos in Photoshop</li>
+				<li>Created custom logo and graphics in Illustrator</li>
+				<li>Coded from the ground up, no template used</li>
+				<li>Optimized user experience with Javascript, JQuery and CSS keyframe animations</li>
+			</ul>
+		</div>
+		<div class="work-text">
+			<h3>WithLove</h3>
+			<p>WithLove is a full-stack web application that allows users to easily record and send personalized e-cards. The cards can be from a single person or a group and are complete with self-selected background music and playback animation.</p>
+			<ul>
+				<li>Technologies used: HTML, CSS, Javascript, Node, Mongo, Angular2</li>
+				<li>Implementation of audio API and binary server</li>
+				<li>Created custom logo in Illustrator</li>
+			</ul>
+		</div>
+		<div class="work-text">
+			<h3>NERDWERDS</h3>
+			<p>NERDWERDS was a game created during an 'educational tool' themed hackathon. Its purpose is to help beginner coders with term recognition. The user drags and drops words into labeled buckets and is scored based on performance.</p>
+			<ul>
+				<li>Technologies used: HTML, CSS, Javascript, Node, Express, JSON, Git</li>
+				<li>Use of JQuery word cloud and drag and drop</li>
+				<li>As team leader, I delegated tasks and made final decisions</li>
+			</ul>
+		</div>
+		<div class="work-text">
+			<h3>Personal Project</h3>
+			<p>For a personal project, I redesigned a local arborist website. I wanted to give it a more modern look and maintain responsiveness across all devices.</p>
+			<ul>
+				<li>Technologies used: HTML, CSS, Javascript, JQuery</li>
+				<li>Responsive deisgn using Bootstrap</li>
+				<li>Created design mockup in Photoshop</li>
+			</ul>
+			<a href="http://linx97.github.io/">View Full Website</a>
+		</div>
+		<div class="work-text">
+			<h3>SLTWTR</h3>
+			<p>These are some of the websites I was involved with building and maintaining during my internship at SLTWTR Digital Agency. This opportunity gave me invaluable experience working on real world projects and a professional development team.</p>
+			<ul>
+				<li>WordPress, Squarespace, and Shopify</li>
+				<li>CRM tools</li>
+				<li>Custom design using HTML/CSS</li>
+				<li>Search Engine Optimization</li>
+				<li>Agile environment</li>
+			</ul>
+		</div>
+		<div class="work-text">
+			<h3>CandyAddict</h3>
+			<p>I had some fun with CSS when I built this mock website about my favorite thing- candy! It is a pretend e-commerce website for people who love sugar as much as I do.</p>
+			<ul>
+				<li>Design aspects include images, colors, layout, typography, and a custom logo</li>
+				<li>CSS animations using keyframes</li>
+				<li>Responsive design with Bootstrap</li>
+			</ul>
+			<a href="./candyaddict/index.html">View Full Website</a>
+		</div>		
+	</div>
 	<div class="landing-holder">
 		<div class="title">
 			<h1>hi, I'm</h1>
